Fix contrast for read email items

--- a/packages/colors/themes/src/snow/standard-base.css
+++ b/packages/colors/themes/src/snow/standard-base.css
@@ -48,9 +48,6 @@
     --optional-scrollbar-thumb-color: #d1cfcd;
     --optional-scrollbar-thumb-hover-color: #c2bfbc;
 
-    --optional-email-item-read-background-color: var(--background-norm);
-    --optional-email-item-read-text-color: var(--text-norm);
-
     --optional-logo-text-proton-color: #1b1340;
     --optional-logo-text-product-color: #6d4aff;
 }
